--- a/bbsTrafficAnalysis.org
+++ b/bbsTrafficAnalysis.org
@@ -4,8 +4,8 @@ BBS ホームページ 改造
 
 *  きっかけ
 
-   アクセス数は増えているが、見学者の問い合わせすらなかなかない状況を打破したい。
-   上程事項として、ホームページの「興味がある」ページを「入会するには(仮)」等と題して、見学募集だけでなく、会員申し込み・賛助会員申し込みへの導線も敷いていけるように更新したいです。時期は夏頃までには可否を出してもらいたいです。
+   アクセス数は増えているが、見学の問い合わせがない状況を打破したい。
+   上程事項として、ホームページの「興味がある」ページを「入会するには(仮)」等へ変更して、見学募集だけでなく、会員申し込み・賛助会員申し込みへの導線も敷いていけるように改造したいです。時期は夏頃までには可否を出してもらいたいです。
 
 
 *  当会ホームページへのアクセスのトップを占める参照元サイトのカウント数
@@ -57,41 +57,39 @@ BBS ホームページ 改造
 
 ** 課題と対策
 
-   課題 どのように興味を持ってもらうか。
-   対策 面白そう、楽しそう、といった演出をかけてやってみたいと思わせる。
+*** 課題1 どのように興味を持ってもらうか。
 
-   課題 検索エンジンへのヒット率
-   対策 投稿内容の多様性
-   対策 広告の利用
+   対策1 面白そう、楽しそう、といった演出をかけてやってみたいと思わせる。楽しそうな雰囲気をブログ上に演出する。BBSの活動だけではなく、サークル的ノリのブログ記事をポストする。
+   対策2 会員に対する要求仕様の明示、求める人材像の具体化(伊藤アイディア)
 
-   課題 参入障壁を下げる、定例会へ参加しやすくする
-   対策 
+*** 課題2 検索エンジンへのヒット率
 
+   対策1 投稿内容の多様性
+   対策2 広告の利用
+
+*** 課題3 参入障壁を下げる、定例会へ参加しやすくする
+
+   対策1 ホームページの「興味がある」ページを「入会するには(仮)」等へ変更し、見学募集だけでなく、会員申し込み・賛助会員申し込みへの導線を実装。
+   対策2 会員に対する要求仕様の明示、求める人材像の具体化(伊藤アイディア)
 
 
 ** 案
 
-1. 会員に対する要求仕様の明示、求める人材像の具体化(伊藤アイディア)
-
-2. 楽しそうな雰囲気をブログ上に演出する。BBSの活動だけではなく、サークル的ノリのブログ記事をポストする。
-
-   具体的に事例として記載し、「うぉぉぉぉ！！やってみたいぜーー！！！」って気持ちにさせる。
-
-3. 導線の明示
+1. 導線の明示
 
    会員（賛助会員も含む）申込みまで導線を引くことで、具体的な入会資格・入会することのメリット・現在特に募集している人材（～スキルを持っている方、属性など）まで明記することが出来る。
    ＜現状>問い合わせ→回答→入会検討→入会　という流れではなく、
    ＜案＞問い合わせ・入会希望→回答→入会　という手数に減らして、「誰でも見学できるよ～」（あんまり効果ない）という形から、「～こんな人材を求めています。あなたが必要です。」と思えるような形にもっていきたい。
 
-4. 会員になるメリットの具体化
+2. 会員になるメリットの具体化
 
-5. 申請フォームのプルタブ化
+3. 申請フォームのプルタブ化
 
    プルタブでまとめることは可能。しかし、フォームが同一内容（名前、フリカナ、メールアドレス）でいいかは議論の余地あり。
    また、プルタブに改造して入会希望者が増えるとは考えにくい。これまでの見学申し込みの方が参入障壁としては低いため。
    興味があるのページのフォームにプルタブみたいなのを導入して、見学申し込みと入会希望の入り口をまとめることは出来るのではという疑問。
 
-6. 問い合わせのページ移設
+4. 問い合わせのページ移設
 
    問い合わせのページの内容は連絡先の記載。これを当会についてのページへ移設する。
    問い合わせのページはすでにデットページ（アクセスされていない）となっているので、当会についてのAbout us 的なのにぶっ込むのもアリ。
